# slint_multi_window

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  dialog.rs  main.rs  tray_icon.rs
